--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,3 +3,7 @@
   height: 100vh;
   background-size: cover;
 }
+.services {
+  background-image: url(../Assets/backgrounds/s_image.jpg);
+  height: 70vh;
+}
