--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,3 +10,29 @@
 .dis {
   display: none;
 }
+.icon, .con, .ico {
+  cursor: pointer;
+}
+.form {
+  background-image: url(../Assets/backgrounds/c_image.jpg);
+  height: 90vh;
+}
+.put {
+  background: transparent;
+  border: white solid 1px;
+}
+.put::placeholder {
+  color: white;
+}
+.btn {
+  background: transparent;
+  border: 1px solid white;
+  color: white;
+  border-radius: 10px;
+  padding: 2px 10px;
+}
+[placeholder="Your message here..."]:focus {
+  background: transparent;
+  border: 2px black solid;
+  box-shadow: none;
+}
