--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,26 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .header {
   background-image: url(../Assets/backgrounds/h_img.jpg);
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
 }
+.introduce {
+  height: 100vh;
+  width: 100%;
+}
 .services {
   background-image: url(../Assets/backgrounds/s_image.jpg);
   height: 60vh;
+  width: 100%;
   background-repeat: no-repeat;
+}
+.serve {
+  height: 60vh;
 }
 .dis {
   display: none;
@@ -34,12 +47,26 @@
   border-radius: 10px;
   padding: 2px 10px;
 }
+.btn:hover {
+  color: white;
+  font-size: 15px;
+}
 .btn:focus {
   box-shadow: none;
 }
 [placeholder="Your message here..."]:focus {
   background: transparent;
-  border: 2px black solid;
+  border: 1px white solid;
+  box-shadow: none;
+}
+[placeholder="Name..."]:focus {
+  background: transparent;
+  border: 1px white solid;
+  box-shadow: none;
+}
+[placeholder="Email..."]:focus {
+  background: transparent;
+  border: 1px white solid;
   box-shadow: none;
 }
 .overlay {
